--- a/front_end/spot/package.json
+++ b/front_end/spot/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
+    "react-easy-crop": "^1.8.3",
     "react-html5-camera-photo": "^1.3.0",
     "react-router": "^4.4.0",
     "react-router-dom": "^4.4.0",
