--- a/front_end/spot/package.json
+++ b/front_end/spot/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
-<<<<<<< HEAD
-    "react-scripts": "2.1.8"
-=======
     "react-easy-crop": "^1.8.3",
     "react-html5-camera-photo": "^1.3.0",
     "react-router": "^4.4.0",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0"
->>>>>>> 77f3af9c4a9e6af7277eb64de3c35f58f1f0860c
   },
   "scripts": {
     "start": "react-scripts start",
