new entry can now get location and date

--- a/front_end/spot/package.json
+++ b/front_end/spot/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "grommet": "^2.5.5",
     "react": "^16.8.4",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3"
