--- a/front_end/spot/package.json
+++ b/front_end/spot/package.json
@@ -7,7 +7,9 @@
     "grommet": "^2.5.5",
     "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.8.4",
+    "react-easy-crop": "^1.8.3",
     "react-scripts": "2.1.8",
     "styled-components": "^4.1.3"
   },
