--- a/front_end/spot/package.json
+++ b/front_end/spot/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "grommet": "^2.5.5",
     "react": "^16.8.4",
@@ -10,7 +11,10 @@
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.8.4",
     "react-easy-crop": "^1.8.3",
+    "react-router": "^4.4.0",
+    "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
+    "reactstrap": "^7.1.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
