--- a/front_end/spot/package.json
+++ b/front_end/spot/package.json
@@ -6,12 +6,14 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "grommet": "^2.5.5",
+    "material-ui-slider": "^3.0.0",
     "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.8.4",
     "react-easy-chart": "^1.0.0",
     "react-easy-crop": "^1.8.3",
+    "react-image-crop": "^6.0.18",
     "react-router": "^4.4.0",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
